# acts-of-kindness

./: package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/internal/: admin.py
backend/app/routers/: auth.py  kindness_post.py  kindness_posts.py  votes.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/register/: route.ts
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
