[project]
name = "backend"
version = "0.1.0"
description = "Backend for acts-of-kindness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "passlib[bcrypt]>=1.7.4",
    "psycopg-binary>=3.2.4",
    "psycopg[binary]>=3.2.4",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.22",
]

[tool.mypy]
ignore_missing_imports = true
